[package]
name = "lbasedb-api"
version = "0.1.1"
edition = "2021"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/lbasedb-api"
description = "REST API for the Lbasedb DBMS."

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["full"] }
lbasedb = { version = "0.1.3" }
serde = { version = "1.0.217", features = ["derive"] }
serde_qs = "0.13.0"
