[package]
name = "lbasedb-api"
version = "0.1.10"
edition = "2024"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/lbasedb-api"
description = "REST API for the Lbasedb DBMS."

[dependencies]
lbasedb = { version = "0.1.11" }
actix-web = "4.13.0"
serde_qs = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
env_logger = "0.11.10"
log = "0.4.29"
actix-cors = "0.7.1"
